[metadata]
project_name = "Segmentation Validation Model"
author = "Charles GAYDON"
contact = "charles.gaydon@gmail.com"
license_file = LICENSE
description_file = README.md
project_template = https://github.com/ashleve/lightning-hydra-template


[isort]
line_length = 99
profile = black
filter_files = True


[flake8]
max_line_length = 99
show_source = True
format = pylint
ignore =
    F401  # Module imported but unused
    W504  # Line break occurred after a binary operator
    F841  # Local variable name is assigned to but never used
    F403  # from module import *
    E501  # Line too long
    C812    # temp ignore
    DAR201  # temp ignore
    DAR101  # temp ignore
    D205    # temp ignore
    WPS407  # temp ignore
    WPS111  # temp ignore
    E741    # temp ignore
    WPS115  # temp ignore
    I004    # temp ignore
    D100    # temp ignore
    D104    # temp ignore
    WPS331  # temp ignore
    WPS221  # temp ignore
    D401    # temp ignore
    D400    # temp ignore
    F405    # temp ignore
    Q000    # temp ignore
    F405    # temp ignore
    D202    # temp ignore
    WPS110  # temp ignore
    WPS211  # temp ignore
    WPS212  # temp ignore
    WPS121  # temp ignore
    D103    # temp ignore
    WPS122  # temp ignore
    WPS305  # temp ignore
    W503    # temp ignore
    WPS305  # temp ignore
    W503    # temp ignore
    VNE001  # temp ignore
    W503    # temp ignore
    WPS404  # temp ignore
    WPS210  # temp ignore
    I001    # temp ignore
    WPS347  # temp ignore
    WPS000  # temp ignore
    WPS226  # temp ignore
    RST301  # temp ignore
    WPS432  # temp ignore
    S101    # temp ignore
    WPS349  # temp ignore
    E800:   # temp ignore
    N802    # temp ignore
    WPS213  # temp ignore
    WPS507  # temp ignore
    VNE002  # temp ignore
    D105    # temp ignore
    WPS220  # temp ignore 
    WPS405  # temp ignore
    DAR301  # temp ignore
    WPS231  # temp ignore
    D107    # temp ignore
    D101    # temp ignore
    I003    # temp ignore
    WPS301  # temp ignore
    D210    # temp ignore
    D208    # temp ignore
    WPS102  # temp ignore
    WPS202  # temp ignore
    T101    # temp ignore
    N806    # temp ignore
    D102    # temp ignore
    D200    # temp ignore
    WPS337  # temp ignore
    DAR401  # temp ignore
    T101    # temp ignore
    D107    # temp ignore
    WPS214  # temp ignore
    WPS230  # temp ignore
    WPS338  # temp ignore
    WPS440  # temp ignore
    F811    # temp ignore
    WPS301  # temp ignore
    WPS201  # temp ignore
    WPS420  # temp ignore
    WPS306  # temp ignore
    WPS441  # temp ignore
    B006    # temp ignore
    P101    # temp ignore
    WPS204  # temp ignore
    P101    # temp ignore
    WPS504  # temp ignore
    B006    # temp ignore
    WPS426  # temp ignore
    WPS336  # temp ignore
    WPS453  # temp ignore
    DAR003  # temp ignore
    DAR102  # temp ignore
    RST213  # temp ignore
    WPS430  # temp ignore
    D403    # temp ignore
    WPS433  # temp ignore
    DAR103  # temp ignore
    DAR003  # temp ignore
    WPS336  # temp ignore
    WPS509  # temp ignore
    WPS425  # temp ignore
    WPS352  # temp ignore
    WPS100  # temp ignore
    S603    # temp ignore
    S404    # temp ignore
    WPS348  # temp ignore
    C815    # temp ignore
    WPS518  # temp ignore
    N814    # temp ignore
    WPS125  # temp ignore
    VNE003  # temp ignore
    A001    # temp ignore
    C408    # temp ignore
    WPS608  # temp ignore
    RST203  # temp ignore
    RST201  # temp ignore
    WPS608  # temp ignore
    WPS317  # temp ignore
    A002    # temp ignore
    WPS339  # temp ignore
    WPS345  # temp ignore
    WPS450  # temp ignore
    WPS347  # temp ignore
    WPS232  # temp ignore
    B001    # temp ignore
    E722    # temp ignore
    WPS339  # temp ignore
    WPS510  # temp ignore
    WPS516  # temp ignore
    E262    # temp ignore
    W605    # temp ignore
    WPS503  # temp ignore
    S301    # temp ignore
    E266    # temp ignore
    S301    # temp ignore
    WPS421  # temp ignore
    S307    # temp ignore
    S301    # temp ignore
    WPS317  # temp ignore
    S403    # temp ignore
    B007    # temp ignore
    WPS437  # temp ignore
    DAR202  # temp ignore
    S403    # temp ignore
    WPS322  # temp ignore
    WPS428  # temp ignore

exclude =
    .git
    __pycache__
    data/*
    tests/*
    notebooks/*
    logs/*
    /home/MDaab/.local/lib/python3.9/

[tool:pytest]
python_files = tests/*
log_cli = True
markers =
    slow
addopts =
    --durations=0
    --strict-markers
    --doctest-modules
filterwarnings =
    ignore::DeprecationWarning
    ignore::UserWarning
