[metadata]
project_name = "Segmentation Validation Model"
author = "Charles GAYDON"
contact = "charles.gaydon@gmail.com"
license_file = LICENSE
description_file = README.md
project_template = https://github.com/ashleve/lightning-hydra-template

[isort]
line_length = 99
profile = black
filter_files = True


[flake8]
max_line_length = 99
show_source = True
format = pylint
ignore =
    F401  # Module imported but unused
    W504  # Line break occurred after a binary operator
    F841  # Local variable name is assigned to but never used
    F403  # from module import *
    E501  # Line too long
    E741  # temp ignore
    F405  # temp ignore
    W503  # temp ignore
    F811  # temp ignore
    E266  # temp ignore
    E262  # temp ignore
    W605  # temp ignore
exclude =
    .git
    __pycache__
    data/*
    tests/*
    notebooks/*
    logs/*
    /home/MDaab/.local/lib/python3.9/

[tool:pytest]
python_files = tests/*
log_cli = True
# markers =
#     slow
addopts =
    # --durations=0
    # --strict-markers
    # --doctest-modules
    # Always use coverage when running pytest
    --cov "./lidar_prod/"
    # Percentage under which coverage is not reached 
    --cov-fail-under 29
    --cov-report html
filterwarnings =
    ignore::DeprecationWarning
    ignore::UserWarning
    ignore::FutureWarning
    ignore::optuna.exceptions.ExperimentalWarning

[coverage:run]
branch = True
omit = lidar_prod/run.py

[coverage:report]
show_missing = True