[metadata]
project_name = "Segmentation Validation Model"
author = "Charles GAYDON"
contact = "charles.gaydon@gmail.com"
license_file = LICENSE
description_file = README.md
project_template = https://github.com/ashleve/lightning-hydra-template

[isort]
line_length = 140
profile = black
filter_files = True
known_first_party = lidar_prod
sections = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER

[flake8]
max_line_length = 140
show_source = True
format = pylint
extend-ignore = E203
exclude =
    .git
    __pycache__
    data/*
    logs/*
    /home/MDaab/.local/lib/python3.9/

[tool:pytest]
python_files = tests/*
log_cli = True
addopts =
    # Always use coverage when running pytest
    --cov "./lidar_prod/"
    # Percentage under which coverage is not reached 
    --cov-fail-under 93
    --cov-report html
filterwarnings =
    ignore::DeprecationWarning
    ignore::UserWarning
    ignore::FutureWarning
    ignore::optuna.exceptions.ExperimentalWarning

[coverage:run]
branch = True
omit = lidar_prod/run.py

[coverage:report]
show_missing = True